# AntColony

./: .gitignore  AntLogic.cpp  AntLogic.hpp  AntWorld.cpp  AntWorld.h  AntWorldLogic.cpp  AntWorldLogic.hpp  CMakeLists.txt  Colony.cpp  Colony.h  ColonyLogic.cpp  ColonyLogic.hpp  FoodLogic.cpp  FoodLogic.hpp  Pheromone.cpp  Pheromone.h  Trail.cpp  Trail.h  ant.cpp  ant.h  antcolony_unittests.cpp  food.cpp  food.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
